--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -599,4 +599,7 @@
          manually by the user. Off by default, since the expected haptic feedback may not be
          available on some devices. -->
     <bool name="config_enableHapticTextHandle">true</bool>
+
+    <!-- Disable rounded corners on windows to improve graphics performance --> 
+    <bool name="config_supportsRoundedCornersOnWindows">false</bool>
 </resources>
