--- a/overlay-pa/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-pa/frameworks/base/core/res/res/values/config.xml
@@ -45,4 +45,18 @@
 
     <!-- Button brightness -->
     <bool name="config_button_brightness_support">true</bool>
+
+    <!-- Does the notification LED support multiple colors?
+         Used to decide if the user can change the colors -->
+    <bool name="config_multiColorNotificationLed">true</bool>
+
+    <!-- Is the battery LED intrusive? -->
+    <bool name="config_intrusiveBatteryLed">true</bool>
+
+    <!-- Does the battery LED support multiple colors? -->
+    <bool name="config_multiColorBatteryLed">true</bool>
+
+    <!-- Do the battery/notification LEDs support pulsing?
+         Used to decide if we show pulse settings -->
+    <bool name="config_ledCanPulse">true</bool>
 </resources>
